packages/plugin-button/web/statics/styles/default-styles.scss
@import '~wix-rich-content-common/dist/statics/styles/mixins';
@import '~wix-rich-content-common/dist/statics/styles/palette';

.button_container {
  cursor: pointer;
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  margin: 5px;
  padding: 12px;
  border-style: none;
  border-width: 0px;
  text-decoration: none;
  background-color: $action-color;
  border-color: $action-color;
  color: var(--ricos-background-color, white);
}

.button_text {
  text-align: center;
  min-width: 16px;
  max-width: 716px;
  overflow: hidden;
  font-size: 14px;
  text-overflow: ellipsis;
  white-space: nowrap;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: var(--ricos-custom-p-font-family);
  @include phone {
    max-width: calc(100vw - 89px);
  }
}

.button_size_content {
  width: auto;
}

